Se cambio margin y padding de li

--- a/menu.html
+++ b/menu.html
@@ -13,11 +13,16 @@
         .container{
             display: flex;
             justify-content: center;
+        }
+
+        .container > ol > li{
             margin: 2px;
             padding: 2px;
         }
+
         .container > ol > li > a{
             color: blue;
+            
         }
 
         .container > ol > li > a:hover{
